--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">Cabecera</div>
         <div id="post">
             <h1>Título atractivo e interesante del post</h1>
 
