--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <div id="container">
-        <div id="cabecera">Cabecera</div>
+        <div id="cabecera">HYPERBLOG
+            <span id="tagline">Tu blog de confianza</span>
+
+        </div>
         <div id="post">
             <h1>Título atractivo e interesante del post</h1>
 
