cambios a css y adicion de parrafo en html

--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,8 @@
     <p>
         explicaremos todo lo que se puede realizar con ramas brunch
     </p>
+
+    <p>Los blogs, son la mejor manera de compartir información y conocimiento.</p>
         </div>
 
     </div>
